--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vite-react-ts-project",
+  "homepage": "https://bobyamay.github.io/OldWebSite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
